# wavelet

./: .gitignore  README.md  pyproject.toml
model/: .gitignore  dataset.py  eegvit.py  train.py  utils.py  waves_transformer.py
model/EEGViT/: README.md  dataset.py  inference_and_test.py  run.py
model/eeg/: helper_functions.py
model/eeg/assets/: README.md
model/meg/: cichy_dataset.py  config.yaml  config_parser.py  meg_gpt.py  train.py
model/meg/assets/: README.md
platform/: package.json  pnpm-lock.yaml  tailwind.config.ts
platform/.next/: trace
platform/.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
platform/.next/server/vendor-chunks/: @floating-ui+core@1.6.8.js  @floating-ui+dom@1.6.11.js  @floating-ui+react-dom@2.1.2_react-dom@18.3.1_react@18.3.1__react@18.3.1.js  @floating-ui+utils@0.2.8.js  @radix-ui+primitive@1.1.0.js  @radix-ui+react-arrow@1.1.0_@types+react-dom@18.3.1_@types+react@18.3.12_react-dom@18.3.1_react@18.3.1__react@18.3.1.js  @swc+helpers@0.5.5.js  (+45 more)
platform/app/: globals.css  layout.tsx  page.tsx
platform/app/dashboard/: page.tsx
platform/components/: app-sidebar.tsx  brain-visualizer.tsx  download-modal.tsx  eeg-waveform.tsx  frequency-bands-chart.tsx  nav-projects.tsx  wave-background.tsx
platform/components/ui/: chart-tooltip.tsx  chart.tsx  spinner.tsx
platform/lib/: audio-player.ts  audio-synthesizer.ts  color-mapping.ts  color-utils.ts  meg-simulator.ts  sensor-positioning.ts
platform/types/: eeg.ts
types/: eeg.ts
(+21 files in other folders)
